# KalyanX

./: .vercelignore  FIREBASE_AUTH_IMPLEMENTATION.md  Main.py  TRIAL_SYSTEM_DOCUMENTATION.md  add_admin.py  app.py  check_and_update_recent_results.py  check_predictions.py  check_update_progress.py  config.py  create_predictions_for_next_valid_day.py  create_predictions_for_today.py  create_predictions_for_tomorrow.py  enhanced_satta_data.csv  fetch_historical_data.py  fetch_results.py  firebase-service-account.json  generate_predictions.py  generate_predictions_after_update.py  generate_test_predictions.py  import_csv_and_predict.py  import_one_market.py  import_recent_data.py  main.py  manual_update.py  models.py  next.config.js  pyproject.toml  quick_update.py  regenerate_predictions.py  requirements.txt  run_update_csv.sh  scheduler.py  simple_main.py  test_app.py  test_fingerprintjs.html  test_server.py  train_and_generate_predictions.py  train_and_predict.py  update_all_markets.py  (+6 more)
attached_assets/: Pasted-import-requests-from-bs4-import-BeautifulSoup-import-pandas-as-pd-from-datetime-import-datetime-tim-1746301111585.txt  enhanced_satta_data.csv  firebase.txt  kalyanx-replit-firebase-adminsdk-fbsvc-59eb139981.json
frontend/: next.config.js  package.json
ml/: feature_engineering.py  model_evaluation.py  predictor.py  trainer.py
routes/: admin_routes.py  api_routes.py  auth_routes.py  forum_routes.py  prediction_routes.py  static_routes.py  subscription_routes.py
services/: auth_service.py  data_service.py  email_service.py  fast2sms_service.py  (+5 more)
(+63 files in other folders)
