[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "trafilatura>=2.0.0",
    "flask-migrate>=4.1.0",
    "apscheduler>=3.11.0",
    "flask-mail>=0.10.0",
    "pywebpush>=2.0.3",
    "scikit-learn>=1.6.1",
    "joblib>=1.4.2",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "xgboost>=3.0.0",
    "razorpay>=1.4.2",
    "twilio>=9.5.2",
    "openai>=1.77.0",
    "beautifulsoup4>=4.13.4",
    "flask-wtf>=1.2.2",
    "sendgrid>=6.11.0",
    "firebase-admin>=6.8.0",
]
